5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1674_1105.log
== TEST (2019-04-25 11:38:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Stark")
elif( desc == "leao" ):
	print("Lannister")
elif( desc == "veado" ):
	print( "Baratheon" )
elif( desc == "dragao" ):
	print("Targaryen")
elif( desc == "rosa"):
	print("Tyrell")
elif( desc == "sol"):
	print("Martell")
elif( desc == "lula")
	print("Greyjoy")
elif( desc == "esfolado")
	print("Bolton")
elif( desc == "turta")
	print("Tully")
-- ERROR:
File "XXXX", line 17
    elif( desc == "lula")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Stark")
elif( desc == "leao" ):
	print("Lannister")
elif( desc == "veado" ):
	print( "Baratheon" )
elif( desc == "dragao" ):
	print("Targaryen")
elif( desc == "rosa"):
	print("Tyrell")
elif( desc == "sol"):
	print("Martell")
elif( desc == "lula"):
	print("Greyjoy")
elif( desc == "esfolado"):
	print("Bolton")
elif( desc == "turta"):
	print("Tully")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:38:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Stark")
elif( desc == "leao" ):
	print("Lannister")
elif( desc == "veado" ):
	print( "Baratheon" )
elif( desc == "dragao" ):
	print("Targaryen")
elif( desc == "rosa"):
	print("Tyrell")
elif( desc == "sol"):
	print("Martell")
elif( desc == "lula"):
	print("Greyjoy")
elif( desc == "esfolado"):
	print("Bolton")
elif( desc == "turta"):
	print("Tully")
-- EXECUTION TIME:
0.212016
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Stark")
elif( desc == "leao" ):
	print("Lannister")
elif( desc == "veado" ):
	print( "Baratheon" )
elif( desc == "dragao" ):
	print("Targaryen")
elif( desc == "rosa"):
	print("Tyrell")
elif( desc == "sol"):
	print("Martell")
elif( desc == "lula"):
	print("Greyjoy")
elif( desc == "esfolado"):
	print("Bolton")
elif( desc == "turta"):
	print("Tully")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:39:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Stark")
elif( desc == "leao" ):
	print("Lannister")
elif( desc == "veado" ):
	print( "Baratheon" )
elif( desc == "dragao" ):
	print("Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Martell")
elif( desc == "lula"):
	print("Greyjoy")
elif( desc == "esfolado"):
	print("Bolton")
elif( desc == "turta"):
	print("Tully")
-- OUTPUT:
Entrada: lula
Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:39:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Stark")
elif( desc == "leao" ):
	print("Lannister")
elif( desc == "veado" ):
	print( "Baratheon" )
elif( desc == "dragao" ):
	print("Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Martell")
elif( desc == "lula"):
	print("Greyjoy")
elif( desc == "esfolado"):
	print("Bolton")
elif( desc == "turta"):
	print("Tully")
-- EXECUTION TIME:
0.155968
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:40:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Casa: Stark")
elif( desc == "leao" ):
	print("Casa: Lannister")
elif( desc == "veado" ):
	print( "Casa: Baratheon" )
elif( desc == "dragao" ):
	print("Casa: Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Casa: Martell")
elif( desc == "lula"):
	print("Casa: Greyjoy")
elif( desc == "esfolado"):
	print("Casa: Bolton")
elif( desc == "turta"):
	print("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:40:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Casa: Stark")
elif( desc == "leao" ):
	print("Casa: Lannister")
elif( desc == "veado" ):
	print( "Casa: Baratheon" )
elif( desc == "dragao" ):
	print("Casa: Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Casa: Martell")
elif( desc == "lula"):
	print("Casa: Greyjoy")
elif( desc == "esfolado"):
	print("Casa: Bolton")
elif( desc == "turta"):
	print("Casa: Tully")
-- EXECUTION TIME:
0.13884
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:41:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Casa: Stark")
elif( desc == "leao" ):
	print("Casa: Lannister")
elif( desc == "veado" ):
	print( "Casa: Baratheon" )
elif( desc == "dragao" ):
	print("Casa: Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Casa: Martell")
elif( desc == "lula"):
	print("Casa: Greyjoy")
elif( desc == "esfolado"):
	print("Casa: Bolton")
elif( desc == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:41:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Casa: Stark")
elif( desc == "leao" ):
	print("Casa: Lannister")
elif( desc == "veado" ):
	print( "Casa: Baratheon" )
elif( desc == "dragao" ):
	print("Casa: Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Casa: Martell")
elif( desc == "lula"):
	print("Casa: Greyjoy")
elif( desc == "esfolado"):
	print("Casa: Bolton")
elif( desc == "turta"):
	print("Casa: Tully")
else:
	print("Casa: Invalido")
-- EXECUTION TIME:
0.195432
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:42:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Casa: Stark")
elif( desc == "leao" ):
	print("Casa: Lannister")
elif( desc == "veado" ):
	print( "Casa: Baratheon" )
elif( desc == "dragao" ):
	print("Casa: Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Casa: Martell")
elif( desc == "lula"):
	print("Casa: Greyjoy")
elif( desc == "esfolado"):
	print("Casa: Bolton")
elif( desc == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:42:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
desc = input("descricao do brasao: ")
print("Entrada:" , desc,)
if( desc == "lobo" ):
	print("Casa: Stark")
elif( desc == "leao" ):
	print("Casa: Lannister")
elif( desc == "veado" ):
	print( "Casa: Baratheon" )
elif( desc == "dragao" ):
	print("Casa: Targaryen")
elif( desc == "rosa"):
	print("Casa: Tyrell")
elif( desc == "sol"):
	print("Casa: Martell")
elif( desc == "lula"):
	print("Casa: Greyjoy")
elif( desc == "esfolado"):
	print("Casa: Bolton")
elif( desc == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.203135
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
